changes for final release